--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^5.2.1",
+    "reactflow": "^11.11.3",
     "twilio": "^5.1.1"
   },
   "devDependencies": {
