feat: added automated workflow for sms

--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,13 @@
 MONGODB_URI=mongodb+srv://kazinezamul3:4O8FagalxZJiLZn5@cluster0.5roguij.mongodb.net/
-EMAIL=kazinizamul@dal.ca
-PASSWORD=
+
+EMAIL_USER=amely.stark@ethereal.email
+EMAIL_PASS=CJgWvggFv4F7u69Twk
+
 TWILIO_ACCOUNT_SID=AC8da5cba093d3daac1b87f7c6469da785
-TWILIO_AUTH_TOKEN=68c93ab4ecccbad772befef63a5e40b6
+TWILIO_AUTH_TOKEN=5f0d60bec6723afc2348987f66746d0d
 TWILIO_PHONE_NUMBER=+15484572182
-MAILJET_API_KEY=15d39c0447b73b349d89f55216fbfff6
-MAILJET_API_SECRET=6e12660415d0ea928cd632b4dfb303a4
+CLIENT_PHONE_NUMBER=+17828827161
+
+RECIPIENT_EMAIL=kazinizamul@dal.ca
+
+PORT=5001
