--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,1 @@
-VITE_TWILIO_ACCOUNT_SID=AC8da5cba093d3daac1b87f7c6469da785
-VITE_TWILIO_AUTH_TOKEN=68c93ab4ecccbad772befef63a5e40b6
-VITE_TWILIO_PHONE_NUMBER=+15484572182
+VITE_BE_URL=http://localhost:5001
