--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
+    "@reduxjs/toolkit": "^2.2.5",
+    "antd": "^5.18.2",
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -20,8 +22,8 @@
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^5.2.1",
-    "reactflow": "^11.11.3",
-    "twilio": "^5.1.1"
+    "react-redux": "^9.1.2",
+    "reactflow": "^11.11.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
