--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 MONGODB_URI=mongodb+srv://kazinezamul3:4O8FagalxZJiLZn5@cluster0.5roguij.mongodb.net/
 
-EMAIL_USER=amely.stark@ethereal.email
-EMAIL_PASS=CJgWvggFv4F7u69Twk
+EMAIL_USER=kazinezamul3@gmail.com
+EMAIL_PASS=fzud gedq ljwk axii
 
 TWILIO_ACCOUNT_SID=AC8da5cba093d3daac1b87f7c6469da785
 TWILIO_AUTH_TOKEN=5f0d60bec6723afc2348987f66746d0d
